# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json
.github/workflows/: main.yml
benches/: bench.rs
components/: Canvas.js
pages/: index.js
shaders/: compute.frag  copy.frag  display.frag  dummy.vert
src/: cell.rs  lib.rs  shaders.rs  timer.rs  universe.rs  utils.rs
tests/: web.rs
website/: bootstrap.js  index.html  index.js  package-lock.json  package.json
