[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Josh Clayton <joshua.clayton@warnermedia.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glsmrs = "0.1.1"
js-sys = "0.3.47"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
